--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,7 @@ html {
     top: 0;
     left: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #a5e3e9;
 }
 
 .todo-list-container {
@@ -56,4 +56,12 @@ html {
     justify-content: space-between;
     align-items: center;
     width: 100%;
+}
+
+.btn-addTodo {
+    background-color: #ffd900;
+}
+
+.btn-addTodo:hover {
+    background-color: #c6a800;
 }
